feat: section y sobre mi

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             view_headline
         </span>
         <ul>
-            <li><a class="active" href="#home">Inicio</a></li>
+            <li><a class="active" href="#inicio">Inicio</a></li>
             <li><a href="#sobreMi">Sobre mí</a></li>
             <li><a href="#servicios">Servicios</a></li>
             <li><a href="#proyectos">Proyectos</a></li>
@@ -33,6 +33,34 @@
         </ul>
     </nav>
     <main>
+        <section id="inicio">
+            <div class="bgProgramacion">
+                <img src="img/imgMia.png" alt="Imagen de mi cara">
+                <div class="presentacion">
+                    <span>Hello world!!</span>
+                    <h1>Soy Tomás Hidalgo</h1>
+                    <span>FullStack Developer</span>
+                </div>
+            </div>
+        </section>
+        <section id="sobreMi">
+            <div class="curriculum">
+                <h2>Soy Tomás Hidalgo, desarrollador web</h2>
+                <span>Soy un desarrollador web muy joven pero con mucha experiencia en el sector informático. Con tan solo 20 años, ya tengo conocimientos en más de 5 lenguajes de programación. Esto se debe a mi gran curiosidad por aprender cada dia algo nuevo y mejorar como profesional. También poseo más aptitudes en el mundo del software ya que estoy cursando 3º de Ingeniería Informática, lo que me ha permitido compaginarmelo con un grado de Desarrollo Web. Ambas titulaciones me han ayudado a crear mi propio camino para desarrollar diversas aplicaciones en múltiples lenguajes de programación.</span>
+                <a href="assets/curriculum.pdf" target="_blank"
+                rel="noopener noreferrer"><span class="material-icons-outlined">download</span>Descargar CV</a>
+            </div>
+            
+            <div class="skills">
+                <h2>Skills</h2>
+                <div>
+                    <div class="skill">
+                        <img src="img/mongodb.png" alt="MongoDB logo">
+                        <span>MongoDB</span>
+                    </div>
+                </div>
+            </div>
+        </section>
 
     </main>
     <footer>
