feat: proyects version pc

--- a/index.html
+++ b/index.html
@@ -25,9 +25,8 @@
             view_headline
         </span>
         <ul>
-            <li><a class="active" href="#inicio">Inicio</a></li>
+            <li><a href="#inicio">Inicio</a></li>
             <li><a href="#sobreMi">Sobre mí</a></li>
-            <li><a href="#servicios">Servicios</a></li>
             <li><a href="#proyectos">Proyectos</a></li>
             <li><a href="#contacto">Contacto</a></li>
         </ul>
@@ -40,7 +39,7 @@
                     <div class="presentacion">
                         <span>Hello world!!</span>
                         <h1>Soy Tomás Hidalgo</h1>
-                        <span>FullStack Developer</span>
+                        <span id="palabraAnimada"></span>
                     </div>
                 </div>
             </section>
@@ -87,11 +86,69 @@
                     </div>
                     <div>
                         <h2>Otras skills</h2>
-                        <div class="barraSkill"><div class="otraSkill">MongoDB</div></div>
-                        <div class="barraSkill"><div class="otraSkill">React</div></div>
-                        <div class="barraSkill"><div class="otraSkill">Docker</div></div>
-                        <div class="barraSkill"><div class="otraSkill">AWS</div></div>
-                        <div class="barraSkill"><div class="otraSkill">NodeJS</div></div>
+                        <div>
+                            <div class="barraSkill"><div class="otraSkill">MongoDB</div></div>
+                            <div class="barraSkill"><div class="otraSkill">React</div></div>
+                            <div class="barraSkill"><div class="otraSkill">Docker</div></div>
+                            <div class="barraSkill"><div class="otraSkill">Hibernate</div></div>
+                            <div class="barraSkill"><div class="otraSkill">NodeJS</div></div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section id="proyectos">
+                <div>
+                    <h2>Portfolio</h2>
+                    <h3>Estos son algunos de mis proyectos que he trabajado.</h3>
+                    <div class="proyects">
+                        <div class="proyecto">
+                            <picture>
+                                <source type="image/png" srcset="img/mastermind.png" />
+                                <img src="img/mastermind.png" alt="MasterMind en javascript" />
+                            </picture>
+                            <div class="descripcion">
+                                <a href="https://github.com/tomashm01/MasterMind"><span class="material-icons-outlined">developer_mode</span>Repositorio</a>
+                                <a href="https://tomashm01.github.io/MasterMind/"><span class="material-icons-outlined">public</span>Web</a>
+                            </div>
+                        </div>
+                        <div class="proyecto">
+                            <picture>
+                                <source type="image/png" srcset="img/calculadora.png" />
+                                <img src="img/calculadora.png" alt="Calculadora en javascript" />
+                            </picture>
+                            <div class="descripcion">
+                                <a href="https://github.com/tomashm01/calculadoraJs"><span class="material-icons-outlined">developer_mode</span>Repositorio</a>
+                                <a href="https://tomashm01.github.io/calculadoraJs/"><span class="material-icons-outlined">public</span>Web</a>
+                            </div>
+                        </div>
+                        <div class="proyecto">
+                            <picture>
+                                <source type="image/png" srcset="img/casaRural.png" />
+                                <img src="img/casaRural.png" alt="Casa Rural" />
+                            </picture>
+                            <div class="descripcion">
+                                <a href="https://github.com/tomashm01/Casa-Rural"><span class="material-icons-outlined">developer_mode</span>Repositorio</a>
+                                <a href="https://tomashm01.github.io/Casa-Rural/"><span class="material-icons-outlined">public</span>Web</a>
+                            </div>
+                        </div>
+                        <div class="proyecto">
+                            <picture>
+                                <source type="image/png" srcset="img/fruteriaHidalgo.png" />
+                                <img src="img/fruteriaHidalgo.png" alt="Fruteria Hidalgo" />
+                            </picture>
+                            <div class="descripcion">
+                                <a href="https://github.com/tomashm01/Fruteria-Hidalgo"><span class="material-icons-outlined">developer_mode</span>Repositorio</a>
+                            </div>
+                        </div>
+                        <div class="proyecto">
+                            <picture>
+                                <source type="image/png" srcset="img/gestorMaquinas.png" />
+                                <img src="img/gestorMaquinas.png" alt="Gestor de máquinas en c++" />
+                            </picture>
+                            <div class="descripcion">
+                                <a href="https://github.com/tomashm01/Gestor-de-maquinas"><span class="material-icons-outlined">developer_mode</span>Repositorio</a>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </section>
