feat: todo responsive menos nav

--- a/index.html
+++ b/index.html
@@ -21,9 +21,7 @@
             <source type="image/png" srcset="img/logoPequeño.png" />
             <img src="img/logoPequeño.png" alt="picture profile" />
         </picture>
-        <span class="material-icons-outlined oculto">
-            view_headline
-        </span>
+        <span class="material-icons-outlined oculto">view_headline</span>
         <ul>
             <li><a href="#inicio">Inicio</a></li>
             <li><a href="#sobreMi">Sobre mí</a></li>
@@ -32,7 +30,7 @@
         </ul>
     </nav>
     <main>
-        <div>
+        <div class="container">
             <section id="inicio">
                 <div class="bgProgramacion">
                     <img src="img/imgMia.png" alt="Imagen de mi cara">
@@ -46,10 +44,8 @@
             <section id="sobreMi">
                 <div class="curriculum">
                     <h2>Soy Tomás Hidalgo, desarrollador web</h2>
-                    <span>Soy un desarrollador web muy joven pero con mucha experiencia en el sector informático. Con tan solo 20 años, ya tengo conocimientos en más de 5 lenguajes de programación.</span>
-                    <span>
-                    Esto se debe a mi gran curiosidad por aprender cada dia algo nuevo y mejorar como profesional. También poseo más aptitudes en el mundo del software ya que estoy cursando 3º de Ingeniería Informática, lo que me ha permitido compaginarmelo con un grado de Desarrollo Web. </span>
-                    <span>
+                    <span>Soy un desarrollador web muy joven pero con mucha experiencia en el sector informático. Con tan solo 20 años, ya tengo conocimientos en más de 5 lenguajes de programación.
+                    Esto se debe a mi gran curiosidad por aprender cada dia algo nuevo y mejorar como profesional. También poseo más aptitudes en el mundo del software ya que estoy cursando 3º de Ingeniería Informática, lo que me ha permitido compaginarmelo con un grado de Desarrollo Web.
                     Ambas titulaciones me han ayudado a crear mi propio camino para desarrollar diversas aplicaciones en múltiples lenguajes de programación.</span>
                     <a href="assets/curriculum.pdf" target="_blank"
                     rel="noopener noreferrer"><span class="material-icons-outlined">download</span>Descargar CV</a>
