fixed: span ancho

--- a/index.html
+++ b/index.html
@@ -148,6 +148,10 @@
                     </div>
                 </div>
             </section>
+            <section id="contacto">
+                <h2>Contacto</h2>
+                <h3>Ponte en contacto conmigo con algunas de estas redes.</h3>
+            </section>
         </div>
 
     </main>
