feat: contactos y footer

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/normalize.css">
     <script src="js/script.js"></script>
+    <script src="https://kit.fontawesome.com/70bea623a1.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <nav>
@@ -149,14 +150,48 @@
                 </div>
             </section>
             <section id="contacto">
-                <h2>Contacto</h2>
-                <h3>Ponte en contacto conmigo con algunas de estas redes.</h3>
+                <div>
+                    <h2>Contacto</h2>
+                    <h3>Ponte en contacto conmigo con algunas de estas redes.</h3>
+                    <div class="contactos">
+                        <a href="https://github.com/tomashm01">
+                            <div>
+                                <i class="fa-brands fa-github"></i>
+                                <p>Github</p>
+                            </div>
+                        </a>
+                        <a href="mailto:tomashidalgomartin@gmail.com">
+                            <div>
+                                <i class="fa-solid fa-envelope"></i>
+                                <p>Correo electrónico</p>
+                            </div>
+                        </a>
+                        <a href="https://twitter.com/tomas_hm01">
+                            <div>
+                                <i class="fa-brands fa-twitter"></i>
+                                <p>Twitter</p>
+                            </div>
+                        </a>
+                        <a href="https://www.linkedin.com/in/tomas-hidalgo-083b0a1b1/">
+                            <div>
+                                <i class="fa-brands fa-linkedin"></i>
+                                <p>Linkedin</p>
+                            </div>
+                        </a>
+                    </div>
+                </div>
             </section>
         </div>
 
     </main>
     <footer>
-
+        <div>
+            <div>
+                <p>Todos los derechos reservados &copy; 2022. </p>
+                <a href="#">@tomashm01</a>
+            </div>
+            <p>Todos los derechos reservados</p>
+        </div>
     </footer>
 </body>
 </html>
