fixed: cajas imagenes responsive?

--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@
                         <div class="proyecto">
                             <picture>
                                 <source type="image/png" srcset="img/fruteriaHidalgo.png" />
+                                <source type="image/png" srcset="img/fruteriaHidalgoPequeño.png" />
                                 <img src="img/fruteriaHidalgo.png" alt="Fruteria Hidalgo" />
                             </picture>
                             <div class="descripcion">
