feat: nav con botones y footer responsive

--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <link rel="stylesheet" href="css/normalize.css">
     <script src="js/script.js"></script>
     <script src="https://kit.fontawesome.com/70bea623a1.js" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/scrollreveal"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
@@ -25,7 +27,7 @@
           </button>
           <ul class="nav-menu">
             <li class="nav-menu-item">
-              <a href="#inicio" class="nav-menu-link nav-link">Inicio</a>
+              <a href="#inicio" class="nav-menu-link nav-link nav-menu-link_active">Inicio</a>
             </li>
             <li class="nav-menu-item">
               <a href="#sobreMi" class="nav-menu-link nav-link">Sobre mí</a>
@@ -34,7 +36,7 @@
               <a href="#proyectos" class="nav-menu-link nav-link">Proyectos</a>
             </li>
             <li class="nav-menu-item">
-              <a href="#contacto" class="nav-menu-link nav-link nav-menu-link_active">Contacto</a>
+              <a href="#contacto" class="nav-menu-link nav-link ">Contacto</a>
             </li>
           </ul>
         </nav>
