feat: mockups y some bugs

--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
     <footer>
         <div>
             <div>
-                <p>Todos los derechos reservados &copy; 2022. </p>
+                <p>Copyright &copy; 2022. </p>
                 <a href="#">@tomashm01</a>
             </div>
             <p>Todos los derechos reservados</p>
