fixed: mobile first

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </head>
 <body>
     <header>
-        <nav class="nav">
+        <nav>
           <a href="#" class="logo"><img src="img/logoPequeño.png" alt="Logo pequeño Tomás Hidalgo"></a>
           <button class="nav-toggle" aria-label="Abrir menú">
             <i class="fa-solid fa-bars"></i>
@@ -32,6 +32,9 @@
             <li class="nav-menu-item">
               <a href="#sobreMi" class="nav-menu-link nav-link">Sobre mí</a>
             </li>
+            <li class="nav-menu-item">
+                <a href="#servicios" class="nav-menu-link nav-link">Servicios</a>
+              </li>
             <li class="nav-menu-item">
               <a href="#proyectos" class="nav-menu-link nav-link">Proyectos</a>
             </li>
@@ -104,6 +107,54 @@
                             <div class="barraSkill"><div class="otraSkill">Hibernate</div></div>
                             <div class="barraSkill"><div class="otraSkill">NodeJS</div></div>
                         </div>
+                    </div>
+                </div>
+            </section>
+            <section id="servicios">
+                <h2>Servicios</h2>
+                <h3>Estas son algunas cualidades que ofrezco como trabajador</h3>
+                <div>
+                    <div class="softskill">
+                        <span class="icono material-icons-outlined">emoji_objects</span>
+                        <h4>Creatividad</h4>
+                        <span>
+                            Soy creativo, pienso que la creatividad es una cualidad muy infravalorada ya que es la que te diferencia del resto al realizar un software.
+                        </span>
+                    </div>
+                    <div class="softskill">
+                        <span class="icono material-icons-outlined">groups</span>
+                        <h4>Trabajo en equipo</h4>
+                        <span>
+                            Aporto mis conocimientos al resto de trabajadores y también soy muy autocrítico, lo que me ayuda a mejorar cada día.
+                        </span>
+                    </div>
+                    <div class="softskill">
+                        <span class="icono material-icons-outlined">contact_phone</span>
+                        <h4>Comunicación</h4>
+                        <span>
+                            Me gusta interesarme por el resto de mis compañeros y formar un vínculo más allá que el de compañeros de un proyecto.
+                        </span>
+                    </div>
+                    <div class="softskill">
+                        <span class="icono material-icons-outlined">report_problem</span>
+                        <h4>Resolución de problemas</h4>
+                        <span>
+                            Soy una persona que nunca deja algo por hacer, y si tengo un problema que solucionar no realizo otra actividad hasta haber acabado la anterior.
+                        </span>
+                    </div>
+                    <div class="softskill">
+                        <span class="icono material-icons-outlined">compress</span>
+                        <h4>Trabajo bajo presión</h4>
+                        <span>
+                            En general suelo trabajar bajo presión, por lo que estoy ya acostumbrado a trabajar con poco margen de tiempo.
+                        </span>
+                    </div>
+                    <div class="softskill">
+                        <span class="icono material-icons-outlined">school</span>
+                        <h4>Aprendizaje activo</h4>
+                        <span>
+                            Me encanta aprender a usar nuevas tecnologías y aportar mis conocimientos aprendidos a la comunidad.
+                        </span>
                     </div>
                 </div>
             </section>
